--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,9 +5,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_brain"
+        android:icon="@mipmap/ic_brain_quiz"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_brain"
+        android:roundIcon="@mipmap/ic_brain_quiz_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
