--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,4 +46,8 @@ dependencies {
 
     /* multi slider*/
     implementation 'io.apptik.widget:multislider:1.3'
+
+    def room_version = "2.2.2"
+    implementation "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
 }
