--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,12 @@ dependencies {
     /* multi slider*/
     implementation 'io.apptik.widget:multislider:1.3'
 
+    /* room */
     def room_version = "2.2.2"
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
+
+    /* lottie anim*/
+    def lottie_version = "3.2.2"
+    implementation "com.airbnb.android:lottie:$lottie_version"
 }
